--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<properties>
 		<java-version>1.7</java-version>
 		<org.springframework-version>3.1.3.RELEASE</org.springframework-version>
-		<org.aspectj-version>1.6.10</org.aspectj-version>
+		<org.aspectj-version>1.6.11</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>
 	
@@ -82,7 +82,7 @@
 		<!-- Spring dependencies end  -->
 		
 		
-		
+		  
 		
 		<!-- Spring security -->
 		<dependency>
@@ -116,6 +116,21 @@
 			<artifactId>aspectjrt</artifactId>
 			<version>${org.aspectj-version}</version>
 		</dependency>	
+		
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjtools</artifactId>
+			<version>${org.aspectj-version}</version>
+		</dependency>
+    
+	    <dependency>
+	        <groupId>org.aspectj</groupId>
+	        <artifactId>aspectjweaver</artifactId>
+	        <version>${org.aspectj-version}</version>
+	    </dependency>
+		
+		
+		
 		
 		<!-- Logging -->
 		<dependency>
@@ -220,13 +235,13 @@
 		  <version>0.2.7</version>
 		 </dependency>
 		 
-		 
+		 <!--  
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
-			<version>1.4</version>
+			<version>1.4.7</version>
 		</dependency>
-		
+		-->
 		<!-- excel library -->
 		  <dependency>
 			<groupId>org.apache.poi</groupId>
@@ -268,8 +283,8 @@
 	    <version>1.9.5</version>
 	    <scope>test</scope>
 	</dependency>
-
-
+	
+   
 	</dependencies>
 
 
