--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,7 +27,8 @@
 		
 	<servlet-mapping>
 		<servlet-name>appServlet</servlet-name>
-		<url-pattern>/</url-pattern>
+		<url-pattern>*.view</url-pattern>
+		<url-pattern>*.json</url-pattern>
 	</servlet-mapping>
 	
 	
@@ -63,8 +64,17 @@
   		<res-sharing-scope>Shareable</res-sharing-scope>
   	</resource-ref>
 	
+	<!-- 메일관련 jndi -->
+	<resource-ref>
+	    <description>Resource reference to a container-managed JNDI JavaMail factory for sending e-mails.</description>
+	    <res-ref-name>bizonMail</res-ref-name>
+	    <res-type>javax.mail.Session</res-type>
+	    <res-auth>Container</res-auth>
+	</resource-ref>
+	
+	
 	<welcome-file-list>
-		<welcome-file>/</welcome-file>
+		<welcome-file>/index.view</welcome-file>
 	</welcome-file-list>
 
 </web-app>
