--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
 		<java-version>1.7</java-version>
-		<org.springframework-version>3.1.3.RELEASE</org.springframework-version>
+		<org.springframework-version>3.2.3.RELEASE</org.springframework-version>
+		<org.springframework-security-version>3.1.3.RELEASE</org.springframework-security-version>
 		<org.aspectj-version>1.6.11</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 	</properties>
@@ -54,6 +55,12 @@
 		</dependency>
 		
 		
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-context-support</artifactId>
+		<version>${org.springframework-version}</version>
+	</dependency>
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
@@ -94,19 +101,19 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
-			<version>${org.springframework-version}</version>
+			<version>${org.springframework-security-version}</version>
 		</dependency>
  
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>${org.springframework-version}</version>
+			<version>${org.springframework-security-version}</version>
 		</dependency>
  
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
-			<version>${org.springframework-version}</version>
+			<version>${org.springframework-security-version}</version>
 		</dependency>
 		
 				
@@ -212,13 +219,13 @@
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
-			<version>1.1.1</version>
+			<version>1.2.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
-			<version>3.1.1</version> 
+			<version>3.2.2</version> 
 		</dependency>
 		
 		
@@ -267,13 +274,13 @@
 	<dependency>
 	   <groupId>org.codehaus.jackson</groupId>
 	   <artifactId>jackson-mapper-asl</artifactId>
-	   <version>1.9.11</version>
+	   <version>LATEST</version>
 	  </dependency>
 	  
 	  <dependency>
 		<groupId>cglib</groupId>
 		<artifactId>cglib</artifactId>
-		<version>2.2.2</version>
+		<version>LATEST</version>
 	</dependency>
 
 
