--- a/pom.xml
+++ b/pom.xml
@@ -212,7 +212,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.8</version>
+			<version>4.10</version>
 			<scope>test</scope>
 		</dependency> 
 		 
@@ -290,6 +290,14 @@
 	    <version>1.9.5</version>
 	    <scope>test</scope>
 	</dependency>
+	
+	<!-- tiles3 -->
+	
+	  <dependency>
+	    <groupId>org.apache.tiles</groupId>
+	    <artifactId>tiles-extras</artifactId>
+	    <version>3.0.0</version>
+	  </dependency>
 	
    
 	</dependencies>
