--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/main/java/www/web/projects/HomeController.java=UTF-8
+encoding//src/main/webapp/WEB-INF/jsp/include/ssi.jsp=UTF-8
 encoding/<project>=UTF-8
