--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,19 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 		
+				
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		
+		
+		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-test</artifactId>
+			<version>LATEST</version>
+		</dependency>
 		
 		<!-- Spring dependencies end  -->
 		
@@ -219,7 +232,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.10</version>
+			<version>4.11</version>
 			<scope>test</scope>
 		</dependency> 
 		 
