--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 		<java-version>1.7</java-version>
 		<org.springframework-version>3.2.3.RELEASE</org.springframework-version>
 		<org.springframework-security-version>3.1.3.RELEASE</org.springframework-security-version>
-		<org.aspectj-version>1.6.11</org.aspectj-version>
+		<org.aspectj-version>1.6.12</org.aspectj-version>
 		<org.slf4j-version>1.6.6</org.slf4j-version>
 		<spring.batch.version>2.2.0.RELEASE</spring.batch.version>
 		<spring.data.version>1.2.1.RELEASE</spring.data.version>
@@ -112,8 +112,16 @@
 			<version>${spring.batch.version}</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		
 		<!-- Spring dependencies end  -->
 		
+		
+
 		
 		  
 		
@@ -300,13 +308,13 @@
 	<dependency>
 	   <groupId>org.codehaus.jackson</groupId>
 	   <artifactId>jackson-mapper-asl</artifactId>
-	   <version>LATEST</version>
+	   <version>1.9.12</version>
 	  </dependency>
 	  
 	  <dependency>
 		<groupId>cglib</groupId>
 		<artifactId>cglib</artifactId>
-		<version>LATEST</version>
+		<version>3.0</version>
 	</dependency>
 
 
